# trojan-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  rust.yml
proto/: trojan.proto
scripts/: grpc_stress.sh
src/: buffer_pool.rs  config.rs  error.rs  grpc.rs  lib.rs  logger.rs  main.rs  mux.rs  pool.rs  relay.rs  socks5.rs  tls.rs  udp.rs  utils.rs  ws.rs
src/grpc/: codec.rs  connection.rs  heartbeat.rs  mod.rs  transport.rs
tests/: grpc_transport_backpressure.rs
