[package]
name = "trojan-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full", "signal"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
sha2 = "0.10"
anyhow = "1.0"
bytes = "1.0"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-rustls = "0.26.4"
rustls = "0.23.32"
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tonic = "0.11"
tokio-stream = "0.1.17"
futures = "0.3.31"
h2 = "0.4.12"
http = "1.3.1"
